Issue #12847: Fix a crash with negative PUT and LONG_BINPUT arguments in the C pickle implementation.